--- a/app/src/main/res/layout/adapter_task.xml
+++ b/app/src/main/res/layout/adapter_task.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -48,26 +49,21 @@
             android:textColor="@color/gray"/>
     </LinearLayout>
 
+    <com.dinuscxj.progressbar.CircleProgressBar
+        android:id="@+id/cpb_task"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:progress_text_size="8sp"/>
 
-    <LinearLayout
-        android:id="@+id/ll_download"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_alignParentRight="true"
-        android:gravity="center">
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/play"
+        android:layout_marginLeft="10dp"/>
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:scaleType="fitXY"
-            android:src="@mipmap/down"/>
-
-        <TextView
-            android:id="@+id/tv_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:visibility="gone"/>
-    </LinearLayout>
+    <ImageView
+        android:layout_marginLeft="10dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/delete"/>
 </LinearLayout>
