--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#2b9646</color>
     <color name="colorAccent">#4caf50</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray">#a9a9a9</color>
 </resources>
