--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -9,10 +9,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <ListView
-        android:id="@+id/lv_task"
+    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
+        android:id="@+id/pmrv_task"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none">
-    </ListView>
+        android:scrollbars="none"/>
 </RelativeLayout>
