--- a/app/src/main/res/layout/dialog_delete_song.xml
+++ b/app/src/main/res/layout/dialog_delete_song.xml
@@ -37,6 +37,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:minHeight="35dp"
             android:text="确定"
             app:bootstrapBrand="success"
             app:bootstrapSize="sm"
@@ -49,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:minHeight="35dp"
             android:text="取消"
             app:bootstrapBrand="warning"
             app:bootstrapSize="sm"
