--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,33 +12,33 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:paddingLeft="@dimen/activity_horizontal_margin">
 
             <RelativeLayout
                 android:id="@+id/rl_about"
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp">
+                android:layout_width="50dp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_centerInParent="true"
                     android:scaleType="fitXY"
                     android:src="@mipmap/about" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_task"
-                android:layout_width="40dp"
+                android:layout_width="50dp"
+                android:gravity="center_vertical"
                 android:layout_height="match_parent"
-                android:layout_marginRight="5dp"
+                android:paddingLeft="10dp"
                 android:layout_toRightOf="@+id/rl_about">
 
                 <ImageView
                     android:layout_width="28dp"
                     android:layout_height="28dp"
-                    android:layout_centerInParent="true"
                     android:scaleType="fitXY"
                     android:src="@mipmap/download" />
             </RelativeLayout>
@@ -84,6 +84,7 @@
                 <com.beardedhen.androidbootstrap.BootstrapButton
                     android:id="@+id/bb_search"
                     android:layout_width="wrap_content"
+                    android:minWidth="100dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:text="搜索"
