--- a/app/src/main/res/layout/adapter_task.xml
+++ b/app/src/main/res/layout/adapter_task.xml
@@ -15,6 +15,7 @@
         android:paddingTop="5dp">
 
         <LinearLayout
+            android:id="@+id/ll_song"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
