--- a/app/src/main/res/layout/adapter_task.xml
+++ b/app/src/main/res/layout/adapter_task.xml
@@ -30,17 +30,35 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
 
-            <TextView
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:id="@+id/tv_bitrate"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_textview_radius"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:text=""
-                android:textSize="12sp" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp">
+                <TextView
+                    android:id="@+id/tv_bitrate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_textview_radius"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text=""
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:textSize="12sp"
+                    android:background="@drawable/shape_textview_radius"
+                    android:layout_marginLeft="10dp"/>
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/tv_singer"
