--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -13,17 +13,19 @@
 
         <RelativeLayout
             android:id="@+id/rl_back"
-            android:layout_width="60dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:gravity="center_vertical"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:background="@drawable/selector_btn_white_solid">
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:scaleType="fitXY"
-                android:src="@mipmap/back" />
+                android:src="@mipmap/back"
+                android:layout_centerInParent="true"/>
         </RelativeLayout>
 
 
