--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#4caf50</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#a9a9a9</color>
+    <color name="gray_transparent">#88a9a9a9</color>
 </resources>
