--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -31,13 +31,21 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
+            <!--\u00A0-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="我不喜欢流浪，却随风飘扬，我脚踏莲香，追逐那渺茫的歌声，却不得不止步于这断壁残垣，我时常在想，这个世界上，还有没有和我一样忧郁的人呢，还有没有和我一样喜欢音乐、分享音乐的人呢？"
+                android:textSize="11sp"
+                android:textColor="@color/colorPrimary"
+                android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
             <TextView
                 android:id="@+id/tv_qq_qun"
                 android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1.程序还在测试中，请尽量下载完一首歌曲之后再进行下载。\r\n\r\n2.无论是WiFi还是流量环境下都会进行下载，下载之前请注意您的流量情况。\r\n\r\n3.更多资讯，欢迎到我的微博留言，我的微博是：竹翎子歌。QQ交流群：484111083。\r\n\r\n4.如果经济允许的话，欢迎赞助我们，您的支持，是我们不断进步的巨大动力。"
+                android:text="1.程序还在测试中，请尽量下载完一首歌曲之后再进行下载。\r\n\r\n2.无论是WiFi还是流量环境下都会进行下载，下载之前请注意您的流量情况。\r\n\r\n3.更多资讯，欢迎到我的微博留言，我的微博是：竹翎子歌。QQ交流群：484111083。\r\n\r\n4.在下载列表界面下拉可以更新并查看下载进度。\r\n\r\n5.歌曲均来源于开源社区，如若用于非法商业活动，本人概不负责。\r\n\r\n6.如果经济允许的话，欢迎赞助我们，您的支持，是我们不断进步的巨大动力。"
                 android:textColor="@color/gray"
                 android:textSize="13sp"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"/>
