--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,9 @@
                 android:gravity="center_vertical"
                 android:hint="请输入关键字"
                 android:padding="5dp"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:singleLine="true"
+                android:imeOptions="actionSearch"/>
 
             <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/bb_search"
