--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -57,126 +55,34 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/et_key"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/shape_edittext_radius"
-                android:gravity="center_vertical"
-                android:hint="请输入关键字"
-                android:padding="5dp"
-                android:textSize="12sp"
-                android:singleLine="true"
-                android:imeOptions="actionSearch"/>
-
-            <com.beardedhen.androidbootstrap.BootstrapButton
-                android:id="@+id/bb_search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:minWidth="80dp"
-                android:text="搜索"
-                app:bootstrapBrand="success"
-                app:bootstrapSize="sm"
-                app:buttonMode="regular"
-                app:roundedCorners="true"
-                app:showOutline="false" />
-        </LinearLayout>
-
-
-        <RadioGroup
-            android:id="@+id/rg_type"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/rb_dog"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="true"
-                android:text="狗"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/rb_lwo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="窝"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/rb_qie"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="鹅"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/rb_yun"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="云"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/rb_xiong"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="熊"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-
-            <RadioButton
-                android:id="@+id/rb_xia"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="虾"
-                android:textColor="@color/gray"
-                android:textSize="13sp" />
-        </RadioGroup>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray" />
-
-        <ListView
-            android:id="@+id/lv_music"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+        <TextView
+            android:layout_width="0dp"
             android:layout_weight="1"
-            android:scrollbars="none"></ListView>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray" />
+            android:layout_height="wrap_content"
+            android:text="经典模式"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="高级模式"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"/>
     </LinearLayout>
-</LinearLayout>
 
+    <com.shizhefei.view.indicator.FixedIndicatorView
+        android:id="@+id/fiv_first_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="@android:color/transparent"/>
+
+    <com.itant.musichome.adapter.SwitchScrollViewPager
+        android:id="@+id/ssvp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.itant.musichome.adapter.SwitchScrollViewPager>
+</LinearLayout>
